# stage

./: .cache  act.py  bridge.py  color.py  command.py  config.json  exceptions.py  light.py  light_modifier.py  main.py  progression.py  pyproject.toml  sequence.py  spotify.py  stage
blitz/: __init__.py
scenes/: DontHateMe.sg  EmoGirl.sg  HeatAbove.sg  HeatAbove.timecode  HeatAboveGPT.timecode  MGK-Tickets-Kiss_Kiss.sg  Test copy.timecode  Test.timecode
vscode_support/: CHANGELOG.md  README.md  eyelang-0.0.1.vsix  eyelang-0.0.2.vsix  eyelang-0.0.3.vsix  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode_support/syntaxes/: stage.tmLanguage.json
