[tool.poetry]
name = "stage"
version = "0.1.0"
description = ""
authors = ["Jacob Sansbury <sansburyjacob@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
phue = "^1.1"
black = "^22.1.0"
requests = "^2.27.1"
spotipy = "^2.19.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
